<resources>
    <string name="app_name">andtest</string>
    <string name="video_get">获取单个视频信息</string>
    <string name="video_list">获取视频列表</string>
    <string name="image_get">获取视频截图</string>
    <string name="data_video_hour">获取以小时为单位的视频数据</string>
    <string name="data_video_date">获取以天为单位的视频数据</string>
    <string name="data_total_date">获取以天为单位的所有数据</string>
    <string name="play_view">播放界面</string>

    <!-- 加载更多View显示相关文字 -->
    <string name="load_more_normal">松开加载更多</string>
    <string name="load_more_loading">加载数据中，请稍等...</string>
    <string name="load_more_error">加载失败，请重试</string>
    <string name="le_live_create">创建直播活动</string>
    <string name="le_live_search">查询直播活动列表</string>
    <string name="le_live_modify">修改直播活动</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="le_live_modifyCoverImg">修改直播活动封面</string>

    <string name="permissions_camera_error">相机无法完成初始化,请正确授权。</string>
    <string name="str_request_camera_message">请求获取相机权限</string>
    <string name="le_live_stop">停止播放</string>
    <string name="le_live_getUrl">获取播放页地址</string>
    <string name="le_live_getPushToken">获取推流token</string>
    <string name="le_live_getPushUrl">获取直播推流地址</string>
    <string name="le_live_getActivityMachineState">查询活动下各机位的状态</string>
    <string name="le_live_streaminfoSearch">获取直播活动的流信息</string>
    <string name="le_live_reateRecTaskMap">创建打点录制任务</string>
    <string name="liveId">直播ID</string>
    <string name="le_live_rec_searchResult">打点录制查询</string>
    <string name="taskId">任务ID</string>
    <string name="offset">开始行数</string>
    <string name="size">每页记录数</string>
    <string name="le_live_getPlayInfo">获取录制视频信息</string>
</resources>
