<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_live_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    tools:context="com.mstring.andtest.activity.live.LiveHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="create"
            android:text="@string/le_live_create" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="search"
            android:text="@string/le_live_search" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="modify"
            android:text="@string/le_live_modify" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="modifyCoverImg"
            android:text="@string/le_live_modifyCoverImg" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="stop"
            android:text="@string/le_live_stop" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getUrl"
            android:text="@string/le_live_getUrl" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getPushToken"
            android:text="@string/le_live_getPushToken" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getPushUrl"
            android:text="@string/le_live_getPushUrl" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getActivityMachineState"
            android:text="@string/le_live_getActivityMachineState" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="streaminfoSearch"
            android:text="@string/le_live_streaminfoSearch" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="reateRecTaskMap"
            android:text="@string/le_live_reateRecTaskMap" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="recSearchResult"
            android:text="@string/le_live_rec_searchResult" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getPlayInfo"
            android:text="@string/le_live_getPlayInfo" />
    </LinearLayout>

</ScrollView>
