<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mstring.andtest.activity.vod.VodHomeActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_video_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_get" />

        <Button
            android:id="@+id/btn_video_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_list" />
        <Button
            android:id="@+id/btn_image_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_get" />
        <Button
            android:id="@+id/btn_data_video_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_video_hour" />
        <Button
            android:id="@+id/btn_data_video_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_video_date" />
        <Button
            android:id="@+id/btn_data_total_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_total_date" />
        <Button
            android:id="@+id/btn_play_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_view" />
    </LinearLayout>
</ScrollView>
